--- a/styles.css
+++ b/styles.css
@@ -90,5 +90,11 @@ body {
   margin: 2rem;
   border-radius: 12px;
 }
+.join {
+  background-color: #121212;
+  padding: 2rem;
+  text-align: center;
+  margin: 2rem;
+  border-radius: 12px;
+}
 
-  
